# aussieplusplus

./: .all-contributorsrc  CONTRIBUTING.md  Cargo.toml  DOCS.md  Makefile  README.md  lib.js
.cargo/: config.toml
examples/: comeinspinner.aussie  dreamtime.aussie  fibonacci.auss  fibonacci.aussie  fizzbuzz.aussie  recursion.aussie  time.aussie  upsidedown.aussie
site/: .eslintignore  .eslintrc  .gitignore  .prettierignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
site/components/: Code.tsx  CodeDropdown.tsx  CodeEditor.js  Features.tsx  Head.tsx
site/lib/: AussieWorker.ts  create_aussie_worker.ts  docs.md  docs.ts  example.ts  syntax.ts
site/pages/: _app.ts  index.tsx
site/public/: aussie_plus_plus.js  aussie_plus_plus.wasm
site/styles/: global.css
site/type/: types.ts
src/: lexer.rs  lib.rs  main.rs  resolver.rs  token.rs  upside_down.rs
src/ast/: conditional.rs  expression.rs  function.rs  loops.rs  mod.rs  op.rs  pattern.rs  statement.rs  var.rs
src/lexer/: lexer.rs  macros.rs  mod.rs  source.rs
src/parser/: error.rs  mod.rs  parser.rs
src/runtime/: environment.rs  eq.rs  error.rs  exit.rs  interpreter.rs  mod.rs  value.rs
src/runtime/callable/: builtin.rs  callable.rs  function.rs  mod.rs
tests/: interpreter_test.rs  lexer_test.rs  parser_test.rs
