[package]
name = "aussie_plus_plus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
chrono-tz = "0.6.0"
itertools = "0.10.1"
structopt = "0.3.23"
thiserror = "1.0.29"

[dev-dependencies]
rand = "0.8.4"
