[package]
name = "aussie_plus_plus"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "aussie_plus_plus"

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.44"
arrayvec = "0.7.1"
itertools = "0.10.1"
rand = "0.8.4"
thiserror = "1.0.29"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
structopt = "0.3.23"
chrono = "0.4.19"
chrono-tz = "0.6.0"
